--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -5,13 +5,22 @@ expand-hosts
 
 domain=conectado.local
 
-server=/www.net.br/111.111.111.111
-server=208.67.222.222
-server=208.67.220.220
+#server=/www.net.br/111.111.111.111
+#server=208.67.222.222
+#server=208.67.220.220
+server=10.36.64.243
 
 address=/mehxample.com/192.168.0.5
 
-cname=ilcmp.vtex.com,lbglpi-1785284617.us-east-1.elb.amazonaws.com
+address=/conectarecife.recife.pe.gov.br/127.0.0.1
+
+address=/www.trf5.jus.br/10.36.17.1
+
+address=/www.cnnbrasil.com.br/10.36.17.1
+
+address=/www2.recife.pe.gov.br/10.36.17.1
+
+address=/.hml.lagomes.rhbr-lab.com/10.36.252.180
 
 mx-host=conectado.local,ini.conectado.local,10
 mx-host=conectado.local,ini2.conectado.local,30
