upadate dnsmasq.conf

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -3,27 +3,25 @@ bogus-priv
 strict-order
 expand-hosts
 
+# Dominio
 domain=conectado.local
 
+# Example DNS FORWARD
 #server=/www.net.br/111.111.111.111
-#server=208.67.222.222
-#server=208.67.220.220
 server=10.36.64.243
 
+# Example type A
 address=/mehxample.com/192.168.0.5
-
-address=/conectarecife.recife.pe.gov.br/127.0.0.1
-
-address=/www.trf5.jus.br/10.36.17.1
-
 address=/www.cnnbrasil.com.br/10.36.17.1
-
 address=/www2.recife.pe.gov.br/10.36.17.1
 
+# Example dns wildcard
 address=/.hml.lagomes.rhbr-lab.com/10.36.252.180
 
+# Example MX
 mx-host=conectado.local,ini.conectado.local,10
 mx-host=conectado.local,ini2.conectado.local,30
 
+# Example TXT
 txt-record=conectado.local,"v=spf1 a -all"
 txt-record=_http._tcp.conectado.local,name=value,paper=A4
